<resources>
    <string name="app_name">RepoBook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repository_title">Title: %1$s</string>
    <string name="username">Username: %1$s</string>
    <string name="description">Description: %1$s</string>
    <string name="something_wrong_title">Something wrong</string>
    <string name="something_wrong_message">Please check your internet connection or try again…</string>
    <string name="search">Search</string>
    <string name="count">Found: %1$s repositories</string>
    <string name="html_url">URL: %1$s</string>

</resources>